apps/argocd/base/patch-argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          securityContext:
            seccompProfile:
              type: "Unconfined"
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
